<resources>
    <string name="app_name">Treepedia</string>

    <string name="govt_of_tn">GOVERNMENT OF TAMILNADU FOREST DEPARTMENT</string>

    <string name="permission_required">Permission required</string>
    <string name="settings_message">This app needs permission to access your device. Select "Permission" in App info to re-enable.</string>
    <string name="app_info">App Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="treeSpecies">Tree Species</string>
    <string name="treeType">Tree Type</string>
    <string name="tools">Tools</string>
    <string name="home">Home</string>
    <string name="chooseByLocation">Location</string>
    <string name="tutorials">Tutorials</string>
    <string name="directions">Get Direction</string>
    <string name="search">Search</string>
    <string name="glossary">Glossary</string>
    <string name="SelectedTreeType">Selected Tree Type</string>
    <string name="contactInformation">Contact Information</string>
    <string name="appDetails">App Details</string>
    <string name="help">Help</string>
    <string name="weathr">Weather</string>
    <string name="checkUpdate">Check Update</string>
    <string name="searchTree">Search</string>
    <string name="ContactUs">Contact Us</string>
    <string name="Schemes">Schemes</string>
    <string name="Feedback">Feedback / Query</string>
    <string name="reset">Reset</string>
    <string name="AboutMistralEnterprises">About Mistral Enterprises</string>
    <string name="AbouttheProjectTeam">About the Project Team</string>
    <string name="estimate">Estimate</string>
    <string name="space">Spacing</string>
    <string name="Irrigation">Irrigation</string>
    <string name="Acknowledgement">Acknowledgement</string>
    <string name="Reference">Reference</string>
    <string name="UpdateData">Update Data</string>
    <string name="UpdateNow">Update Now</string>
    <string name="location">Location</string>
    <string name="locator">Locator</string>
    <string name="plantationCalculation">Plantation Calculator</string>
    <string name="agroForestry">Agro Forestry</string>
    <string name="inMeter">In meter</string>
    <string name="not_available_location">Location Not Enabled. Please Enabled Now?.</string>
    <string name="notDatafoundTreeType">Not Found Tree Type</string>
    <string name="notDatafoundTreeSpecies">Not Found Tree Species</string>
    <string name="notfoundLocation">Not Found Location</string>
    <string name="district">District</string>
    <string name="soiltype">Soil Type</string>
    <string name="rainFall">Rainfall</string>
    <string name="terraintype">Terrain Type</string>
    <string name="searchResult">Search Result</string>
    <string name="viewDetails">View Details</string>
    <string name="images">Images</string>
    <string name="noImages">Not found images</string>
    <string name="descriptions">General Information</string>

    <string name="areaTobePlanted">Area to be Planted</string>
    <string name="estimatePlantation">Estimate Plantation</string>
    <string name="aboutPlantationV2">About Tamilnadu Treepedia </string>
    <string name="ChangeLanguage">Change Language : </string>
    <string name="English">English</string>
    <string name="Tamil">Tamil</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="districtNames">District Name</string>
    <string name="ContactAddress">Contact Address</string>
    <string name="loader">Downloading data. Please wait...</string>

    <string name="loadData">Load Data</string>

    <string name="noSoilType">No Soil Type</string>
    <string name="noRainfall">No Rainfall</string>
    <string name="noTerrainType">No Terrain type</string>
    <string name="noTreeType">No Tree Type</string>
    <string name="notFoundTutorial">Not Found Tutorials</string>
    <string name="Soil">Soil </string>
    <string name="Altitude">Altitude </string>
    <string name="Climate">Temperature Min </string>
    <string name="ClimateMax">Temperature Max </string>
    <string name="temp">Temperature</string>
    <string name="Rainfall">Rainfall </string>
    <string name="Terrain">Terrain </string>

    <string name="no_tutorials">Not found Tutorial Videos</string>

    <string name="plantationMaterial">Plantation Material </string>
    <string name="plantationTec">Plantation Technique </string>
    <string name="OtherBenefits">Other Benefits </string>
    <!--<string name="Care">Care </string>-->
    <string name="RecommendedHarvest">Recommended Harvest </string>
    <string name="RecommendedCombinations">Recommended Combinations </string>
    <string name="RecommendedModel">Recommended Model </string>
    <string name="Diseasecontrol">Care &amp; Disease Control </string>
    <string name="Intercropping">Intercropping </string>
    <string name="Other">Other </string>
    <string name="Benefits">Benefits </string>
    <string name="Additional">Benefits </string>

    <string name="GeneralInformation">General Information</string>
    <string name="SoilpH">Soil pH</string>
    <string name="Habitat">Habitat</string>

    <string name="TreeCharacteristics">Tree Characteristics</string>
    <string name="ConservationStatus">Conservation Status</string>
    <string name="EdibilityRating">Edibility Rating</string>
    <string name="MedicinalRating">Medicinal Rating</string>
    <string name="OtherUsesRating">Other Uses Rating</string>
    <string name="Habit">Habit</string>
    <string name="GrowthRate">Growth Rate</string>
    <string name="Height">Height</string>
    <string name="CultivationStatus">Cultivation Status</string>
    <string name="OtherDetails">Other Details</string>

    <string name="Propagation">Natural Regeneration</string>
    <string name="Yield">Yield</string>
    <string name="MarketDetails">Market Details</string>

    <string name="Intercrops">Intercrops</string>
    <string name="MajorUses">Major Uses</string>
    <string name="OtherUses">Other Uses</string>

    <string name="CarbonStockDetails">Carbon Stock Details</string>
    <string name="References">References</string>

    <string name="AGROFORESTRYRECOMMENDATIONS">AGROFORESTRY RECOMMENDATIONS</string>
    <string name="USES">USES</string>
    <string name="ADDITIONALINFORMATION">ADDITIONAL INFORMATION</string>
    <string name="HARVESTDETAILS">HARVEST DETAILS</string>
    <string name="PLANTATIONGUIDELINES">PLANTATION GUIDELINES</string>
    <string name="TREECHARACTERISTICSPROPERTIES">TREE CHARACTERISTICS &amp; PROPERTIES</string>
    <string name="FAVORABLEENVIRONMENTALCONDITIONS">FAVORABLE ENVIRONMENTAL CONDITIONS</string>
    <string name="ABOUTTHESPECIES">ABOUT THE SPECIES</string>


    <string name="name">Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="email">Email</string>
    <string name="hint_Email">Enter Email</string>
    <string name="hint_Location">Enter Location</string>
    <string name="select_dis">Select District</string>
    <string name="select_email">Select Email</string>
    <string name="Feedback_Suggestion">Suggestion Feedback</string>
    <string name="hint_email_validation">Enter valid Email</string>
    <string name="enter_sug">Enter Your Suggestion</string>
    <string name="hint_Name">Enter Name</string>
    <string name="hint_MobileNumber">Enter Mobile Number</string>

    <string name="hint_Feedback">Enter Feedback</string>
    <string name="submit">Submit</string>
    <string name="enterAllField">Enter All Field</string>

    <string name="fetchingData">Fetching data</string>
    <string name="feedbackSend">Sending your feedback...</string>
    <string name="selectDistrictName">Select District Name</string>
    <string name="selectSoilName">Select Soil Type</string>
    <string name="selectRainFallName">Select Rainfall</string>
    <string name="selectTerrainName">Select Terrain</string>
    <string name="selectTreeName">Select Tree Type</string>
    <string name="shortMap">Current Location</string>
    <string name="netConnection">Unable to connect to server. Please check network.</string>
    <string name="netConnectionLocation">Unable to get location. Please check network.</string>
    <string name="pressAgain">Press again to exit</string>
    <string name="networkmesg">\t\tTreepedia works without internet connection. To get latest update to the application,
    \n 1. Enable Mobile Internet or WiFi
    \n 2. Open Treepedia> Menu> Settings> Check Update.
    \n 3. Treepedia takes a few minutes to download content after app installation.</string>
    <string name="internetConnection">Network Connection</string>
    <string name="cancel">Cancel</string>
    <string name="done">Go</string>
    <string name="enable">Enable</string>
    <string name="required">The number of planting material required for your land is</string>
    <string name="updateAvailable">This update take few minutes downloading files from Server. Please click Update Now Button</string>

    <string name="topic">Help Topic 1</string>
    <string name="topic1">Help Topic 2</string>
    <string name="topic2">Help Topic 3</string>
    <string name="topic3">Help Topic 4</string>

    <string name="chekingUpdates">Checking for updates…</string>
    <string name="upToDate">Treepedia is up to date.</string>
    <string name="menuNormalName">Common Name</string>
    <string name="menuCientificName">Scientific Name</string>

    <string name="upToDateServerIssue">Treepedia Server not connect. Try again.</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>

    <string name="description_not_found">Descriptions not found</string>
    <string name="models">Models</string>
    <string name="inter_crops">Inter crops</string>
    <string name="tryAgain">Try Again</string>
    <string name="no_data_found">No data found</string>
    <string name="bgm_success">Running Background</string>
    <string name="bgm_failed">Running Background Service Failed</string>
    <string name="server_500">500 Internal Server Error.Try again later.</string>

    <string name="agro_model">Model</string>
    <string name="agro_intercorp">InterCrop</string>
    <string name="download_error">Download Format Error</string>
    <string name="server_not_found">Server not found or check your connection</string>
    <string name="link"><a href="http://www.www.com">ForGet Password</a></string>


    <string name="artificial_regeneration">Artificial Regeneration</string>
    <string name="seed_collection">Seed Collection</string>
    <string name="seed_treatment">Seed Treatment</string>
    <string name="nursery_technique">Nursery Technique</string>


    <string name="select_hyper_link">Find Glossary Item </string>


    <string name="radious">Radius</string>
    <string name="height">Height (meters)</string>
    <string name="farm_factor">Farm Factor</string>

    <string name="average">Average of top, middle and bottom girth</string>
    <string name="length">Length of the login (meters)</string>


    <string name="radious_toast">Enter Radius</string>
    <string name="height_toast">Enter Height </string>
    <string name="farm_factor_toast">Enter Farm Factor</string>

    <string name="average_toast">Enter Average of top, middle and bottom girth</string>
    <string name="length_toast">Enter Length of the log (meters)</string>
</resources>

