<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/radious"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/radious"
                    android:inputType="numberDecimal"
                    android:scrollbars="vertical"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/height"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"
                    android:scrollbars="vertical"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/farmFactor"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/farm_factor"
                    android:inputType="numberDecimal"
                    android:scrollbars="vertical"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <com.fresh.mind.plantation.customized.RippleView
                android:id="@+id/estimateRadious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/estimate"
                android:textColor="@color/white" />


            <com.fresh.mind.plantation.customized.CustomTextView
                android:id="@+id/calc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/average"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/average"
                    android:inputType="numberDecimal"
                    android:scrollbars="vertical"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/length"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/length"
                    android:inputType="numberDecimal"
                    android:scrollbars="vertical"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <com.fresh.mind.plantation.customized.RippleView
                android:id="@+id/estimateAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/estimate"
                android:textColor="@color/white" />

            <com.fresh.mind.plantation.customized.CustomTextView
                android:id="@+id/calcAv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>