<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/HeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar"
        android:orientation="horizontal">

        <com.fresh.mind.plantation.customized.CustomTextView
            android:id="@+id/districtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/districtNames"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/contactDetals"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:typeface="lato_semibold" />

        <com.fresh.mind.plantation.customized.CustomTextView
            android:id="@+id/contactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/contactDetals"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:typeface="lato_semibold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.fresh.mind.plantation.customized.CustomTextView
                android:id="@+id/contactDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="email"
                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/ContactAddress"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/districtName"
                app:layout_constraintRight_toLeftOf="@+id/contactNo"
                app:layout_constraintTop_toTopOf="parent"
                app:typeface="lato_semibold" />

            <com.fresh.mind.plantation.customized.CustomTextView
                android:id="@+id/mMapDirecrion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:gravity="center"
                android:text="@string/directions"
                android:textColor="@color/red"
                app:typeface="lato_bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/mLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

    <ListView
        android:id="@+id/contactDetals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:foregroundGravity="center"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetails"
        app:layout_constraintVertical_bias="0.56" />
</LinearLayout>